--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
                     <ul class="header-menu-list list">
                         <li class="header-menu-item">
                             <a class="header-menu-link link" href="./index.html">Studio</a></li>
-                        <li class="header-menu-item current-2">
-                            <a class="header-menu-link link" href="./portfolio.html">Portfolio</a></li>
+                        <li class="header-menu-item">
+                            <a class="header-menu-link current link" href="./portfolio.html">Portfolio</a></li>
                         <li class="header-menu-item">
                             <a class="header-menu-link link" href="">Contacts</a></li>
                     </ul>
@@ -53,13 +53,12 @@
                         width="360" 
                         height="300" 
                         alt="picture-of-banking-app-interface">
-                        <div class="tabs-cover">
-                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
-                    </div>
-                    <div class="container tabs-content">
+                        <div class="container tabs-content">
                         <h2 class="tabs-title">Banking App Interface Concept</h2>
-                        <p class="tabs-text">App</p></div></a></li>
+                        <p class="tabs-text">App</p></div></a>
+                    </li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
                         <div class="tabs-cover-wrap">
@@ -68,14 +67,13 @@
                         width="360" 
                         height="300" 
                         alt="picture-of-cashless-payment">
-                        <div class="tabs-cover">
-                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
-                        </div>
-                    <div class="container tabs-content">
+                        <div class="container tabs-content">
                         <h2 class="tabs-title">Cashless Payment</h2>
-                        <p class="tabs-text">Marketing</p></div></a></li>
-                <li class="tabs-item">
+                        <p class="tabs-text">Marketing</p></div></a>
+                    </li>
+                    <li class="tabs-item">
                     <a class="tabs-link link" href="">
                         <div class="tabs-cover-wrap">
                         <img class="tabs-img" 
@@ -83,13 +81,12 @@
                         width="360" 
                         height="300" 
                         alt="picture-of-meditation-app">
-                        <div class="tabs-cover">
-                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                        </div>
-                        </div>
+                        <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
                     <div class="container tabs-content">
                         <h2 class="tabs-title">Meditation App</h2>
-                        <p class="tabs-text">App</p></div></a></li>
+                        <p class="tabs-text">App</p></div></a>
+                    </li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
                         <div class="tabs-cover-wrap">
@@ -98,13 +95,12 @@
                         width="360" 
                         height="300" 
                         alt="picture-of-taxi-service">
-                        <div class="tabs-cover">
-                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
-                        </div>
-                    <div class="container tabs-content">
+                        <div class="container tabs-content">
                         <h2 class="tabs-title">Taxi Service</h2>
-                        <p class="tabs-text">Marketing</p></div></a></li>
+                        <p class="tabs-text">Marketing</p></div></a> 
+                    </li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
                         <div class="tabs-cover-wrap">
@@ -113,13 +109,12 @@
                         width="360" 
                         height="300" 
                         alt="picture-of-screen-illustration">
-                        <div class="tabs-cover">
-                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
-                        </div>
-                    <div class="container tabs-content">
+                        <div class="container tabs-content">
                         <h2 class="tabs-title">Screen Illustrations</h2>
-                        <p class="tabs-text">Design</p></div></a></li>
+                        <p class="tabs-text">Design</p></div></a>
+                    </li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
                         <div class="tabs-cover-wrap">
@@ -128,13 +123,12 @@
                         width="360" 
                         height="300" 
                         alt="picture-of-online-courses">
-                        <div class="tabs-cover">
-                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
-                        </div>
-                    <div class="container tabs-content">
+                        <div class="container tabs-content">
                         <h2 class="tabs-title">Online Courses</h2>
-                        <p class="tabs-text">Marketing</p></div></a></li>
+                        <p class="tabs-text">Marketing</p></div></a>
+                    </li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
                         <div class="tabs-cover-wrap">
@@ -143,14 +137,13 @@
                         width="360" 
                         height="300" 
                         alt="picture-of-instagram-stories-concept">
-                        <div class="tabs-cover">
-                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
-                        </div>
-                    <div class="container tabs-content">
+                        <div class="container tabs-content">
                         <h2 class="tabs-title">Instagram Stories Concept</h2>
-                        <p class="tabs-text">Design</p></div></a></li>
-                <li class="tabs-item">
+                        <p class="tabs-text">Design</p></div></a>
+                    </li>
+                    <li class="tabs-item">
                     <a class="tabs-link link" href="">
                         <div class="tabs-cover-wrap">
                         <img class="tabs-img" 
@@ -158,13 +151,12 @@
                         width="360" 
                         height="300" 
                         alt="picture-of-organic-food">
-                        <div class="tabs-cover">
-                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                        </div>
-                        </div>
+                        <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
                     <div class="container tabs-content">
                         <h2 class="tabs-title">Organic Food</h2>
-                        <p class="tabs-text">Web Site</p></div></a></li>
+                        <p class="tabs-text">Web Site</p></div></a>
+                    </li>
                 <li class="tabs-item">
                     <a class="tabs-link link" href="">
                         <div class="tabs-cover-wrap">
@@ -173,13 +165,12 @@
                         width="360" 
                         height="300" 
                         alt="picture-of-fresh-coffee">
-                        <div class="tabs-cover">
-                            <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="tabs-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
-                        </div>
-                    <div class="container tabs-content">
+                        <div class="container tabs-content">
                         <h2 class="tabs-title">Fresh Coffee</h2>
-                        <p class="tabs-text">Web Site</p></div></a></li>
+                        <p class="tabs-text">Web Site</p></div></a>
+                    </li>
             </ul>
     </div>
 </section>
@@ -203,7 +194,7 @@
                 rel="noopener noreferrer"
                 >
                 <svg class="footer-socials-icon" width="24" height="24">
-                    <use href="./images/icons.svg.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
             </li>
@@ -215,7 +206,7 @@
                 rel="noopener noreferrer"
                 >
                 <svg class="footer-socials-icon" width="24" height="24">
-                    <use href="./images/icons.svg.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
             </a>
             </li>
@@ -227,7 +218,7 @@
                 rel="noopener noreferrer"
                 >
                 <svg class="footer-socials-icon" width="24" height="24">
-                    <use href="./images/icons.svg.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
             </a>
             </li>
@@ -239,7 +230,7 @@
                 rel="noopener noreferrer"
                 >
                 <svg class="footer-socials-icon" width="24" height="24">
-                    <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
             </a>
             </li>
