--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
                     <ul class="header-menu-list list">
                         <li class="header-menu-item current-1">
-                            <a class="header-menu-link link" href="./index.html">Studio</a></li>
+                            <a class="header-menu-link current link" href="./index.html">Studio</a></li>
                         <li class="header-menu-item">
                             <a class="header-menu-link link" href="./portfolio.html">Portfolio</a></li>
                         <li class="header-menu-item">
@@ -51,7 +51,7 @@
                     <li class="advantages-item">
                         <div class="advantages-item-top">
                             <svg class="advantages-item-icon" width="64" height="64">
-                                <use href="./images/icons.svg.svg#icon-antenna"></use>
+                                <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="advantages-subtitle">Strategy</h3>
@@ -61,7 +61,7 @@
                     <li class="advantages-item">
                         <div class="advantages-item-top">
                             <svg class="advantages-item-icon" width="64" height="64">
-                                <use href="./images/icons.svg.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="advantages-subtitle">Punctuality</h3>
@@ -70,7 +70,7 @@
                     <li class="advantages-item">
                         <div class="advantages-item-top">
                             <svg class="advantages-item-icon" width="64" height="64">
-                                <use href="./images/icons.svg.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="advantages-subtitle">Diligence</h3>
@@ -79,7 +79,7 @@
                     <li class="advantages-item">
                         <div class="advantages-item-top">
                             <svg class="advantages-item-icon" width="64" height="64">
-                                <use href="./images/icons.svg.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="advantages-subtitle">Technologies</h3>
@@ -118,7 +118,7 @@
                                             rel="noopener noreferrer"
                                         >
                                             <svg class="team-socials-icon" width="16" height="16">
-                                                <use href="./images/icons.svg.svg#icon-instagram"></use>
+                                                <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
                                         </a>  
                                     </li>
@@ -130,7 +130,7 @@
                                             rel="noopener noreferrer"
                                         >
                                             <svg class="team-socials-icon" width="16" height="16">
-                                                <use href="./images/icons.svg.svg#icon-twitter"></use>
+                                                <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
                                         </a>  
                                     </li>
@@ -142,7 +142,7 @@
                                             rel="noopener noreferrer"
                                         >
                                             <svg class="team-socials-icon" width="16" height="16">
-                                                <use href="./images/icons.svg.svg#icon-facebook"></use>
+                                                <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
                                         </a>  
                                     </li>
@@ -154,7 +154,7 @@
                                             rel="noopener noreferrer"
                                         >
                                             <svg class="team-socials-icon" width="16" height="16">
-                                                <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>  
                                     </li>
@@ -175,7 +175,7 @@
                                         rel="noopener noreferrer"
                                         >
                                         <svg class="team-socials-icon" width="16" height="16">
-                                            <use href="./images/icons.svg.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>  
                                     </li>
@@ -187,7 +187,7 @@
                                         rel="noopener noreferrer"
                                         >
                                         <svg class="team-socials-icon" width="16" height="16">
-                                            <use href="./images/icons.svg.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>  
                                     </li>
@@ -199,7 +199,7 @@
                                         rel="noopener noreferrer"
                                         >
                                         <svg class="team-socials-icon" width="16" height="16">
-                                            <use href="./images/icons.svg.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>  
                                     </li>
@@ -211,7 +211,7 @@
                                         rel="noopener noreferrer"
                                         >
                                         <svg class="team-socials-icon" width="16" height="16">
-                                            <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>  
                                 </li>
@@ -232,7 +232,7 @@
                                     rel="noopener noreferrer"
                                     >
                                     <svg class="team-socials-icon" width="16" height="16">
-                                        <use href="./images/icons.svg.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>  
                                 </li>
@@ -244,7 +244,7 @@
                                     rel="noopener noreferrer"
                                     >
                                     <svg class="team-socials-icon" width="16" height="16">
-                                        <use href="./images/icons.svg.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>  
                                 </li>
@@ -256,7 +256,7 @@
                                     rel="noopener noreferrer"
                                     >
                                     <svg class="team-socials-icon" width="16" height="16">
-                                        <use href="./images/icons.svg.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>  
                                 </li>
@@ -268,7 +268,7 @@
                                     rel="noopener noreferrer"
                                     >
                                     <svg class="team-socials-icon" width="16" height="16">
-                                        <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>  
                             </li>
@@ -289,7 +289,7 @@
                                     rel="noopener noreferrer"
                                     >
                                     <svg class="team-socials-icon" width="16" height="16">
-                                        <use href="./images/icons.svg.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>  
                                 </li>
@@ -301,7 +301,7 @@
                                     rel="noopener noreferrer"
                                     >
                                     <svg class="team-socials-icon" width="16" height="16">
-                                        <use href="./images/icons.svg.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>  
                                 </li>
@@ -313,7 +313,7 @@
                                     rel="noopener noreferrer"
                                     >
                                     <svg class="team-socials-icon" width="16" height="16">
-                                        <use href="./images/icons.svg.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>  
                                 </li>
@@ -325,7 +325,7 @@
                                     rel="noopener noreferrer"
                                     >
                                     <svg class="team-socials-icon" width="16" height="16">
-                                        <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>  
                             </li>
@@ -343,42 +343,42 @@
                         <li class="customers-item">
                             <a class="customers-link" href="" target="_blank">
                                 <svg class="customers-item-icon" width="104" height="56">
-                                    <use href="./images/icons.svg.svg#icon-logo-1"></use>
+                                    <use href="./images/icons.svg#icon-logo-1"></use>
                                 </svg> 
                             </a>
                         </li>
                         <li class="customers-item">
                             <a class="customers-link" href="" target="_blank">
                                 <svg class="customers-item-icon" width="104" height="56">
-                                    <use href="./images/icons.svg.svg#icon-logo-2"></use>
+                                    <use href="./images/icons.svg#icon-logo-2"></use>
                                 </svg> 
                             </a>
                         </li>
                         <li class="customers-item">
                             <a class="customers-link" href="" target="_blank">
                                 <svg class="customers-item-icon" width="104" height="56">
-                                    <use href="./images/icons.svg.svg#icon-logo-3"></use>
+                                    <use href="./images/icons.svg#icon-logo-3"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="customers-item">
                             <a class="customers-link" href="" target="_blank">
                                 <svg class="customers-item-icon" width="104" height="56">
-                                    <use href="./images/icons.svg.svg#icon-logo-4"></use>
+                                    <use href="./images/icons.svg#icon-logo-4"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="customers-item">
                             <a class="customers-link" href="" target="_blank">
                                 <svg class="customers-item-icon" width="104" height="56">
-                                    <use href="./images/icons.svg.svg#icon-logo-5"></use>
+                                    <use href="./images/icons.svg#icon-logo-5"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="customers-item">
                             <a class="customers-link" href="" target="_blank"> 
                                 <svg class="customers-item-icon" width="104" height="56">
-                                    <use href="./images/icons.svg.svg#icon-logo-6"></use>
+                                    <use href="./images/icons.svg#icon-logo-6"></use>
                                 </svg> 
                             </a>
                         </li>
@@ -405,7 +405,7 @@
                     rel="noopener noreferrer"
                     >
                     <svg class="footer-socials-icon" width="24" height="24">
-                        <use href="./images/icons.svg.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
                 </li>
@@ -417,7 +417,7 @@
                     rel="noopener noreferrer"
                     >
                     <svg class="footer-socials-icon" width="24" height="24">
-                        <use href="./images/icons.svg.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
                 </li>
@@ -429,7 +429,7 @@
                     rel="noopener noreferrer"
                     >
                     <svg class="footer-socials-icon" width="24" height="24">
-                        <use href="./images/icons.svg.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
                 </li>
@@ -441,7 +441,7 @@
                     rel="noopener noreferrer"
                     >
                     <svg class="footer-socials-icon" width="24" height="24">
-                        <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
                 </li>
@@ -453,8 +453,8 @@
         <div class="modal">
             <button type="button" class="modal-close-btn" data-modal-close>
                 <a class="close-btn" href="" target="_blank">
-                    <svg class="close-btn-icon" width="8px" height="8px">
-                        <use href="./images/icons.svg.svg#icon-close-btn"></use>
+                    <svg class="close-btn-icon" width="8" height="8">
+                        <use href="./images/icons.svg#icon-close-btn"></use>
                     </svg>
                 </a>
             </button>
